<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:aapt="http://schemas.android.com/aapt"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rootLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#424242">

    <TextView
        android:id="@+id/appNameF1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/atomic_age"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="#FFE0B2"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/fragmentOneButton"
        android:layout_width="0dp"
        android:layout_height="83dp"
        android:layout_margin="15sp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/button_sample"
        android:fontFamily="@font/montserrat_light"
        android:onClick="onClickOneButton"
        android:text="@string/goButton"
        android:textColor="#424242"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/skip"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/skip"
        android:layout_width="wrap_content"
        android:layout_height="24dp"
        android:layout_marginBottom="24dp"
        android:fontFamily="@font/montserrat"
        android:onClick="onClickToHome"
        android:text="@string/skipGuide"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/fragmentOneView"
        android:layout_width="175dp"
        android:layout_height="175dp"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/todo"
        android:padding="1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appNameF1"
        app:srcCompat="@drawable/guide_logo" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/montserrat"
        android:paddingStart="24dp"
        android:paddingEnd="24dp"
        android:text="@string/guideTextView1"
        android:textAlignment="textStart"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragmentOneView" />
</androidx.constraintlayout.widget.ConstraintLayout>
